--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,10 @@ span {
   }
 
 .container {
-  max-width: 1200px;
+    max-width: 1200px;
   margin: 0 auto;
-  padding: 0 2rem;
+  padding: 0 20px;
+
 }
 
 /* HEADER FIXE */
@@ -70,32 +71,27 @@ section {
 
 /* HERO */
 .hero-content {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+ display: flex;
   gap: 3rem;
-  min-height: 70vh;
-  text-align: center;
+  align-items: center;
   flex-wrap: wrap;
+ 
+
 }
 
-.hero-text h2 {
+.hero-text {
  flex: 1;
-  width: 650px;
+  min-width: 300px;
 
 
 }
 
-.hero-img img {
-  flex: 1;
-  display: flex;
-  width: 300px;
-  height: 300px;
+.code-pic {
+  width: 280px;
+  height: 280px;
   border-radius: 50%;
-  box-shadow: 0 5px 15px rgba(0,0,0,0.2);
-  object-fit: cover;
-  border: 8px solid #fff;
-
+ 
+  
 }
 
 /* TITRES */
